--- a/EasyJob/Windows/HelpDialog.xaml
+++ b/EasyJob/Windows/HelpDialog.xaml
@@ -18,7 +18,7 @@
         <TextBlock Grid.Row="0" Name="HelpHeading" Text="" Padding="10" Background="#E2E2E2" FontSize="30" VerticalAlignment="Center" FontWeight="Bold" TextWrapping="Wrap"/>
         <TextBlock Grid.Row="1" Name="HelpUsed" Text="" Padding="10,12,10,6" Foreground="#404040" TextWrapping="Wrap"/>
         
-        <ui:ScrollViewerEx Grid.Row="2" VerticalScrollBarVisibility="Auto">
+        <ui:ScrollViewerEx Focusable="False" IsTabStop="False" Grid.Row="2" VerticalScrollBarVisibility="Auto">
             <Grid Name="HelpInfoGrid" Margin="15,0,15,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -31,12 +31,12 @@
                         <Image Source="pack://application:,,,/Images/play.png" Margin="-6,-2,-6,-2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </StackPanel>
                 </Button>
-                <Button Grid.Row="1" Margin="5,5,30,5" Height="20" Width="20" HorizontalAlignment="Right" VerticalAlignment="Top" Click="StopVideoButton_Click">
+                <Button AutomationProperties.Name="Stop video" Grid.Row="1" Margin="5,5,30,5" Height="20" Width="20" HorizontalAlignment="Right" VerticalAlignment="Top" Click="StopVideoButton_Click">
                     <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal" Background="Transparent">
                         <Image Source="pack://application:,,,/Images/stop.png" Margin="-6,-2,-6,-2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </StackPanel>
                 </Button>
-                <Button Grid.Row="1" Margin="5" Height="20" Width="20" HorizontalAlignment="Right" VerticalAlignment="Top" Click="ReloadVideoButton_Click">
+                <Button AutomationProperties.Name="Reload video" Grid.Row="1" Margin="5" Height="20" Width="20" HorizontalAlignment="Right" VerticalAlignment="Top" Click="ReloadVideoButton_Click">
                     <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal" Background="Transparent">
                         <Image Source="pack://application:,,,/Images/reload.png" Margin="-8,-4,-8,-4" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </StackPanel>
