--- a/EasyJob/Windows/ReorderTabsDialog.xaml
+++ b/EasyJob/Windows/ReorderTabsDialog.xaml
@@ -16,7 +16,7 @@
 
         <Border Grid.Column="0" BorderBrush="#E3E3E3" BorderThickness="0,0,2,0">
             <Border BorderBrush="#E3E3E3" BorderThickness="1" CornerRadius="2" Margin="12">
-            <ListView Name="MainWindowTabsList" ItemsSource="{Binding TabItems}">
+            <ListView AutomationProperties.Name="Reorder tabs" Name="MainWindowTabsList" ItemsSource="{Binding TabItems}">
             <ListView.Resources>
                 <Style TargetType="GridViewColumnHeader">
                     <Setter Property="Visibility" Value="Collapsed" />
@@ -35,10 +35,10 @@
         </Border>
 
         <DockPanel Grid.Column="1" Height="80" HorizontalAlignment="Center">
-            <Button DockPanel.Dock="Top" HorizontalAlignment="Center" Height="28" Width="28" Click="TabsReorderUp_Click">
+            <Button AutomationProperties.Name="Move up" DockPanel.Dock="Top" HorizontalAlignment="Center" Height="28" Width="28" Click="TabsReorderUp_Click">
                 <Image Source="pack://application:,,,/Images/up.png" Margin="-4"/>
             </Button>
-            <Button DockPanel.Dock="Bottom" HorizontalAlignment="Center" Height="28" Width="28" Click="TabsRedorderDown_Click">
+            <Button AutomationProperties.Name="Move down" DockPanel.Dock="Bottom" HorizontalAlignment="Center" Height="28" Width="28" Click="TabsRedorderDown_Click">
                 <Image Source="pack://application:,,,/Images/down.png" Margin="-4"/>
             </Button>
         </DockPanel>
